index.css
/* ... */
.content--default {
  align-items: start;
  justify-content: center;
  flex-direction: column;
}

.content--vertical{
  flex-direction: column;
  align-items: start;
  justify-content: center;
}

.content--white-text {
  color: #fff;
}

.content__title-para-g{
  margin-bottom: 20px;
}

.content__para {
  font-size: 18px;
  font-weight: 200;
  margin: 5px 70px 5px 0px;
}

.main-header{
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    z-index: 1;
    padding: var(--header-padding-v) var(--header-padding-h);
    color: #fff;
    display: flex;
    align-items: center;
    /*justify-content: space-between;*/
}

.main-header__logo {
  width: 70px;
}

.main-header__logo img {
  width: 100%;
}

.main-header__counter {
  margin-left: auto;
  position: relative;
  width : 66px;
  height: 66px;
  font-size: 13px;
  transform: scale(0.83);
  font-family: arial,sans-serif;
  left: 15px;
  transition: transform 0.3s ease;
  cursor: pointer;
}

.main-header__counter:hover {
  transform: scale(1);
}

.main-header__current-slide {
  top: 13px;
  left: 22px;
  position: absolute;
}

.main-header__sep {
  height: 1.5px;
  width: 21px;
  border-radius: 3px;
  background-color: #fff;
  position: absolute;
  top: 30px;
  left: 24px;
  transform: rotate(-45deg);
}

.main-header__total-slides {
  bottom: 17px;
  right: 16px;
  position: absolute;
}

.main-header__circle{
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.main-header__svg {
  width: 100%;
  height: 100%;
  overflow: visible;
}

.main-header__circle-g{
  transform: translate(50%,50%);
}

.main-header__circle-g circle{
  stroke: #fff;
  fill: none;
}

.grey-panel {

}

.legend-text {
  font-size: 12px;
  alignment-baseline: middle;
  text-align: center;
}

.chart-line {
  stroke : #fff;
  stroke-width : 3px;
}

g.circles {
  fill: #fff;
}

.predicted-line{
  stroke : #121567;
  stroke-width : 3px;
}

.predicted {
  fill : #121567;
}

.point-value{
  font-size: 35px
}

.line-years, .line-values{
  text-anchor: middle;
  fill: #fff;
}

.line-years{
  font-weight: 100;
  font-size: 11px;
}

.line-values {
  font-weight: 600;
}

#age-circle-diagram{
  width: 100%;
  flex-basis: 70%;
  overflow: visible;
  /*filter: drop-shadow(0 0 0.95rem rgb(0,0,0,0.1));*/
}

#cost-line-diagram{
  /*left: 50vw;
  transform: translate(-50%);
  position: fixed;
  width: 100vw;
  height: 100vh;*/
  flex-basis: 70%;
  width: 100%;
  overflow: visible;
}

#num-schools-bar-chart{
  flex-basis: 70%;
  width: 100%;
  overflow: visible;
}

.bar-chart__g {
  fill: #fff;
}

#progress-circle {
  transform: rotate(-90deg);
  transition: stroke-dashoffset 0.2s ease;
}

.fade-in-transition {
  transition : transform .7s cubic-bezier(0,0,.2,1),opacity .7s cubic-bezier(0,0,.2,1);
  transform: translateY(50px);
  opacity: 0;
}

.fade-in-transition--active {
  transform: translateY(0);
  opacity: 1;
}

.fade-in-transition--delay {
  transition-delay: .2s;
}

.fade-in-transition--delay2 {
  transition-delay: .4s;
}

.fade-in-transition--delay3 {
  transition-delay: .6s;
}

.fade-out-transition{
  transition: opacity .4s cubic-bezier(0,0,.2,1);
}

.fade-out-transition--active {
  opacity: 0;
}

.menu {
  z-index: 100;
  position: fixed !important;
  height: 100%;
  width: 70vw;
  max-width: 500px;
  right: 0;
  background-color: #fff;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  overflow-y: scroll;
}

.data-source {
  position: fixed;
  width: 100vw;
  height: 100px;
  background-color: #fff;
  z-index: 100;
  transform: translateY(100%);
  transition: transform 0.3s ease;
  bottom: 0;
}

.main-overlay {
  position: absolute;
  z-index: 99;
  width: 100vw;
  height: 100vh;
  background-color: #000;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.3s ease;
}

/*.testimonial-slide {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: space-evenly;
}

.testimonial-slide__section {
  flex-basis: 50%;
  flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: center;
}

.testimonial-slide__title {
  font-size: 38px;
}

.testimonial-slide__button {
  padding: 22px;
  padding-top: 22px;
  padding-right: 22px;
  padding-bottom: 22px;
  padding-left: 22px;
  min-width: 170px;
  text-align: center;
  border-radius: 60px;
  background-color: rgba(164, 157, 157, 0.4);
  color: #fff;
  font-size: 21px;
  cursor: pointer;
}

.testimonial-story {
  position: fixed;
  width: 100vw;
  bottom: 0;
  background-color: rgba(255, 255, 255, 0.8);
  transform: translateY(100%);
  transition: transform 0.3s ease;
  z-index: 100;
  padding: 55px;
  box-sizing: border-box;
}*/

.testimonial-slide {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
  justify-content: space-evenly;
}

.testimonial-slide__section {
  flex-basis: 50%;
  flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: center;
}

.testimonial-slide__title {
  font-size: 20px;
}

.testimonial-slide__button {
  padding: 14px;
  text-align: center;
  border-radius: 60px;
  background-color: rgba(164, 157, 157, 0.4);
  color: #fff;
  font-size: 10px;
  cursor: pointer;
}

.testimonial-story {
  position: fixed !important;
  width: 100vw;
  max-height: 55vh;
  overflow-y: scroll;
  bottom: 0;
  background-color: rgba(255, 255, 255, 0.8);
  transform: translateY(100%);
  transition: transform 0.3s ease;
  z-index: 100;
  padding: 55px;
  padding-top: 15px;
  box-sizing: border-box;
}

.testimonial-story h1 {
  font-size: 20px;
}

.testimonial-story p {
  font-size: 15px;
}

.menu__item {
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: background-color 300ms ease;
}

.menu__item:active {
  background-color: #ddddd8;
}

.menu__title {
  font-size: 19px;
  padding: 20px 0px;
}

.menu__index {
  font-size: 30px;
  font-weight: 600;
  padding: 0px 20px;
  margin: 20px 0px;
  min-width: 50px;
}

.caseStudyButt {
  text-decoration: underline;
  cursor: pointer;
}
/* ... */

